# Colecci-n-ejercicios-Israel-Lara

./: CMakeLists.txt  README.md  main.cpp
parte1/: ejercicio1.cpp  ejercicio1.h
parte2/: ejercicio2.cpp  ejercicio2.h
parte3/: ejercicio3.cpp  ejercicio3.h
parte4/: ejercicio4.cpp  ejercicio4.h
parte5/: ejercicio5.cpp  ejercicio5.h
