cmake_minimum_required(VERSION 3.29)
project(Colecci_n_ejercicios_Israel_Lara)

set(CMAKE_CXX_STANDARD 14)

add_executable(Colecci_n_ejercicios_Israel_Lara
    main.cpp
        parte1/ejercicio1.h
        parte1/ejercicio1.cpp
        parte2/ejercicio2.h
        parte2/ejercicio2.cpp
        parte3/ejercicio3.h
        parte3/ejercicio3.cpp
        parte4/ejercicio4.h
        parte4/ejercicio4.cpp
        parte5/ejercicio5.h
        parte5/ejercicio5.cpp)
